fixed spacing and styles for articles forms etc

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,3 +33,7 @@ html, body {
   display: flex;
   justify-content: center;
 }
+
+.btn-link {
+  padding-left: 0px;
+}
